--- a/reference-card.tex
+++ b/reference-card.tex
@@ -260,10 +260,10 @@ QQ-Plot anhand einer Normalverteilung
 $P(X \leq 1)$ falls $X \sim Unif(0, 7)$ \\
 
 \pythoninline{st.uniform.pdf(x=1, loc=0, scale=7)} \\
-Dichte an der Stelle \textit{x} = 3 falls $X \sim Unif(0, 7)$ \\
+Dichte an der Stelle \textit{x} = 1 falls $X \sim Unif(0, 7)$ \\
 
 \pythoninline{st.uniform.rvs(size=3, loc=0, scale=7)} \\
-uniform verteilte Zufallszahlen, $X_i \sim Unif(0, 7)$
+uniform verteilte Zufallszahlen, $X_i \sim Unif(0, 7)$ \\
 
 \pythoninline{st.expon.cdf(x=4, loc=0, scale=1/3)} \\
 $P(X \leq 4)$ falls $X \sim Exp(3)$ \\
@@ -275,10 +275,10 @@ Dichte an der Stelle \textit{x} = 1 falls $X \sim Exp(3)$ \\
 $P(X \leq 130)$ falls $X \sim \mathcal{N}(100, 15^2)$ \\
 
 \pythoninline{st.norm.ppf(q=0.05, loc=100, scale=15)} \\
-Quantile einer Normalverteilung \\
+5\% Quantile falls $X \sim \mathcal{N}(100, 15^2)$ \\
 
 \pythoninline{st.norm.cdf(x=1.5)} \\
-Standardnormalverteilung \\
+$P(X \leq 1.5)$ falls $X \sim \mathcal{N}(0, 1^2)$ \\
 
 \pythoninline{st.binom.cdf(k=5100, n=10000, p=0.5)} \\
 $P(X \leq 5100)$ falls $X \sim Bin(10000, 0.5)$ \\
@@ -318,11 +318,12 @@ wenn $n=13$, $\sigma=0.024$ und $u=80.02$ \\
 
 \pythoninline{st.norm.interval(alpha=0.99, loc=31, } \\
 \pythoninline{	scale=6/np.sqrt(10))} \\
-99\% Vertrauensintervall einer Normalverteilung
+99\% Vertrauensintervall falls $X \sim \mathcal{N}(31, 6 / \sqrt{10})$
 
 \subsection*{Statistische Tests}
 \pythoninline{st.binom_test(x=3, n=5, p=0.5)} \\
 Vorzeichentest mit \textit{x} Erfolge bei \textit{n} Versuchen \\
+und einer Erfolgswahrscheinlichkeit von 50\%  \\ 
 
 \pythoninline{st.wilcoxon(arr, correction=True)} \\
 Wilcoxon-Test \\
@@ -330,10 +331,10 @@ Wilcoxon-Test \\
 \pythoninline{st.ttest_rel(series1, series2)} \\
 Statistischer Test für gepaarte Stichproben  \\
 
-\pythoninline{st.ttest_ind(x, y, equal_var=False)} \\
+\pythoninline{st.ttest_ind(series1, series2, equal_var=False)} \\
 Statistischer Test für ungepaarte Stichproben  \\
 
-\pythoninline{st.mannwhitneyu(x, y)} \\
+\pythoninline{st.mannwhitneyu(series1, series2)} \\
 Mann-Whitney U-Test (aka Wilcoxon Rank-sum Test) \\
 
 \pythoninline{st.ttest_1samp(series, 1).pvalue} \\
@@ -360,7 +361,8 @@ F-Statistik plotten \\
  
 \pythoninline{fit = ols("steak_id~Treatment", data=frame).fit()} \\
 \pythoninline{fit.summary()} \\
-Gruppenmittelmodell berechnen \\
+Gruppenmittelmodell berechnen zwischen der Id des \\ 
+Steaks und der ausgeführten Behandlung \\
 
 \pythoninline{fit_pred = fit.get_prediction()} \\
 \pythoninline{fit_pred.conf_int()} \\
@@ -380,11 +382,13 @@ Anova Tabelle berechnen
 
 \pythoninline{formula = "Y ~ C(Methode, Sum) + C(Batch, Sum)"} \\
 \pythoninline{fit = ols(formula, data=frame).fit()} \\
-Zweiweg-Varianzanalyse mit Blöcken \\
+Zweiweg-Varianzanalyse mit Blöcken zwischen den \\
+Datenspalten \textit{Methode} und \textit{Batch} \\
 
 \pythoninline{formula = "Y ~ C(Konz, Sum) * C(Temp, Sum)"} \\
 \pythoninline{fit = ols(formula, data=frame).fit()} \\
-Faktorielle Experimente mit zwei Faktoren
+Faktorielle Experimente mit zwei Faktoren \\
+Konzentration (\textit{Ko}) und Temperatur (\textit{Temp})
 
 \subsection*{Zeitreihen}
 \pythoninline{from statsmodels.tsa.seasonal } \\
@@ -399,7 +403,7 @@ BoxCox-Funktion definieren \\
 \pythoninline{col = frame["TravelDate"]} \\
 \pythoninline{frame["TravelDate"] = pd.DatetimeIndex(col)} \\
 \pythoninline{frame.set_index("TravelDate", inplace=True)} \\
-Datums-Index einer Zeitreihe setzen
+Datums-Index einer Zeitreihe setzen \\
 
 \pythoninline{frame["Passengers"].rolling(window=12).mean()} \\
 Bewegendes Mittel (moving average) berechnen \\
