--- a/reference-card.tex
+++ b/reference-card.tex
@@ -11,6 +11,8 @@
 \usepackage{minted}
 \usepackage{xcolor}
 \usepackage{fancyhdr}
+\usepackage{tcolorbox}
+\usepackage{tikz}
 
 \definecolor{headertext}{rgb}{0.5,0.5,0.5}
 \renewcommand{\headrulewidth}{0pt}
@@ -23,6 +25,8 @@
 \setlength{\parindent}{0cm}
 \newminted[python]{python}{}
 \newmintinline{python}{breaklines,tabsize=2}
+
+\tcbset{boxrule=1pt,colback=black!4!white, title=\underline{\textbf{DataFrame für die nächsten Befehle}},colframe=black!4!white,coltitle=black}
 
 \begin{document}
 \begin{multicols*}{3}
@@ -44,7 +48,8 @@ import numpy as np
 \pythoninline{np.abs(-45)}: Absolutwert einer Zahl berechnen \\
 \pythoninline{np.round(2.35, x)}: Zahl auf \textit{x} Nachkomastellen runden \\
 \pythoninline{np.log(100)}: Natürlicher Logarithmus berechnen \\
-\pythoninline{np.log10(100)}: Logarithmus mit Basis 10 berechnen
+\pythoninline{np.log10(100)}: Logarithmus mit Basis 10 berechnen \\
+\pythoninline{np.prod(arr)}: Produkt der Zahlen von \textit{arr}
 
 \subsection*{Numpy Arrays}
 \pythoninline{arr = np.array([2, 1, 4, 5, -8, 10])} \\
@@ -118,6 +123,7 @@ series = pd.Series(
 \columnbreak
 
 \pythoninline{series.sum()}: Die Summe der Elemente von \textit{series} \\
+\pythoninline{series.prod()}: Das Produkt der Elemente von \textit{series} \\
 \pythoninline{series.mean()}: Der Durchschnitt der Elemente von \textit{series} \\
 \pythoninline{series.median()}: Der Median der Elemente von \textit{series} \\
 \pythoninline{series.var()}: Die Varianz der Elemente von \textit{series} \\
@@ -251,13 +257,18 @@ QQ-Plot anhand einer Normalverteilung
 \columnbreak
 
 \subsection*{Verteilungen}
-\pythoninline{cdf}: $P(X \leq x)$ \\
-\pythoninline{ppf}: Quantile der Verteilung \\
+\pythoninline{cdf}: Kumulative Verteilungsfunktion $P(X \leq x)$ \\
+\pythoninline{ppf}: Quantile der Verteilung $\alpha_q$ \\
 \pythoninline{pdf}: Dichte an der Stelle $x$ \\
+\pythoninline{pmf}: Punktw'keit an der Stelle $P(X=x)$ \\
 \pythoninline{rvs}: $size$ Zufallszahlen generieren \\
 
-\pythoninline{st.uniform.cdf(x=1, loc=0, scale=7)} \\
-$P(X \leq 1)$ falls $X \sim Unif(0, 7)$ \\
+\pythoninline{st.poisson.pmf(mu=1.5, k=2)} \\
+$P(X = 2)$ falls $X \sim Pois(1.5)$ \\
+
+\pythoninline{st.uniform.cdf(x=1, loc=4, scale=5)} \\
+$P(X \leq 1)$ falls $X \sim Unif(4, 9)$ \\
+\textbf{!} \textit{scale} ist nicht Endwert, sondern Länge des Intervall \\
 
 \pythoninline{st.uniform.pdf(x=1, loc=0, scale=7)} \\
 Dichte an der Stelle \textit{x} = 1 falls $X \sim Unif(0, 7)$ \\
@@ -267,6 +278,7 @@ uniform verteilte Zufallszahlen, $X_i \sim Unif(0, 7)$ \\
 
 \pythoninline{st.expon.cdf(x=4, loc=0, scale=1/3)} \\
 $P(X \leq 4)$ falls $X \sim Exp(3)$ \\
+\textbf{!} \textit{scale} muss mit $1 / \lambda$ angegeben werden \\
 
 \pythoninline{st.expon.pdf(x=1, loc=0, scale=1/3)} \\
 Dichte an der Stelle \textit{x} = 1 falls $X \sim Exp(3)$ \\
@@ -284,16 +296,16 @@ $P(X \leq 1.5)$ falls $X \sim \mathcal{N}(0, 1^2)$ \\
 $P(X \leq 5100)$ falls $X \sim Bin(10000, 0.5)$ \\
 
 \pythoninline{st.binom.pmf(k=1000, n=1000, p=0.5)} \\
-Wert der Wahrscheinlichkeitsdichtefunktion an der Stelle $k$ \\
+Wert der Wahrscheinlichkeitsdichtefunktion an der Stelle $k$
+
+\columnbreak
 
 \pythoninline{st.t.cdf(x=168, df=149, loc=164, } \\
 \pythoninline{	scale=10/np.sqrt(150))} \\
 $P[\overline{X}_{150} \leq 168]$ falls $u = 164$, $\hat{o} = 10$ und $T \sim t_{149}$ \\
 
 \pythoninline{st.t.ppf(0.05, df=v)} \\
-Quantile einer T-Verteilung mit \textit{v} Freiheitsgrade
-
-\columnbreak
+Quantile einer T-Verteilung mit \textit{v} Freiheitsgrade \\
 
 \pythoninline{st.norm.rvs(size=n)}\\
 generiert \textit{n} normalverteilte Zahlen \\
@@ -358,15 +370,39 @@ Varianz-Analyse mit Boxplots zwischen \textit{x} und \textit{y} \\
 \pythoninline{sns.distplot(Fstat, kde=False, norm_hist=True, 
 	hist_kws=dict(edgecolor="black", linewidth=2))} \\
 F-Statistik plotten \\
+
+\begin{tcolorbox}
+\begin{python}
+frame = pd.DataFrame({
+  "Treatment": np.repeat(["Vak","CO2"], 3),
+  "steak_id":[7.66, 6.98, 7.80, 5.26, ...]
+})
+\end{python}
+\end{tcolorbox}
  
 \pythoninline{fit = ols("steak_id~Treatment", data=frame).fit()} \\
 \pythoninline{fit.summary()} \\
 Gruppenmittelmodell berechnen zwischen der Id des \\ 
-Steaks und der ausgeführten Behandlung \\
+Steaks und der ausgeführten Behandlung
+
+\columnbreak
 
 \pythoninline{fit_pred = fit.get_prediction()} \\
 \pythoninline{fit_pred.conf_int()} \\
 Vertrauensintervalle für Gruppenmittelwerte \\
+
+\pythoninline{anova_lm(fit)} \\
+Anova Tabelle berechnen \\
+
+\begin{tcolorbox}
+\begin{python}
+frame = pd.DataFrame({
+  "Batch": np.tile(["1", "2", "3"], 4),
+  "Methode": np.repeat(["8500", "9100"], 6),
+  "Y": np.array([90.3, 89.2, 98.2, ...])
+})
+\end{python}
+\end{tcolorbox}
 
 \pythoninline{interaction_plot(x=frame["Batch"], }\\
 \pythoninline{	trace=frame["Methode"], response=frame["Y"])} \\
@@ -375,20 +411,27 @@ Interaktionsplot erstellen \\
 - entlang der x-Achse der durch x festgelegte Faktor \\
 - für jede Stufe in trace wird dann eine Linie gezogen \\
 
-\pythoninline{anova_lm(fit)} \\
-Anova Tabelle berechnen
-
-\columnbreak
-
 \pythoninline{formula = "Y ~ C(Methode, Sum) + C(Batch, Sum)"} \\
 \pythoninline{fit = ols(formula, data=frame).fit()} \\
 Zweiweg-Varianzanalyse mit Blöcken zwischen den \\
 Datenspalten \textit{Methode} und \textit{Batch} \\
 
+\begin{tcolorbox}
+\begin{python}
+frame = pd.DataFrame({
+  "Konz": np.repeat(["A", "B", "C","D"], 6),
+  "Temp": np.tile(np.repeat(["1", "2"],3),4),
+  "Y": np.array([82, 46, 16, 20, 13, ...])
+})
+\end{python}
+\end{tcolorbox}
+
 \pythoninline{formula = "Y ~ C(Konz, Sum) * C(Temp, Sum)"} \\
 \pythoninline{fit = ols(formula, data=frame).fit()} \\
-Faktorielle Experimente mit zwei Faktoren \\
-Konzentration (\textit{Ko}) und Temperatur (\textit{Temp})
+Faktorielle Experimente mit den zwei \\
+Faktoren \textit{Konzentration} und \textit{Temperatur}
+
+\columnbreak
 
 \subsection*{Zeitreihen}
 \pythoninline{from statsmodels.tsa.seasonal } \\
@@ -399,6 +442,21 @@ Benötigte Bibliotheksfunktionen für Zeitreihen \\
 \pythoninline{	return np.log(x) if (lambd == 0) \} \\
 \pythoninline{		else (x**lambd - 1) / lambd} \\
 BoxCox-Funktion definieren \\
+
+\begin{tcolorbox}
+\begin{verbatim}
+TravelDate  Passengers
+0   1/1/1949         112
+1   2/1/1949         118
+2   3/1/1949         132
+3   4/1/1949         129
+4   5/1/1949         121
+.   ........         ...
+\end{verbatim}
+\end{tcolorbox}
+
+\pythoninline{series = frame["Passengers"].shift(-5)} \\
+Zeitverschiebung (shifting) mit $k = -5$ \\
 
 \pythoninline{col = frame["TravelDate"]} \\
 \pythoninline{frame["TravelDate"] = pd.DatetimeIndex(col)} \\
@@ -412,7 +470,21 @@ bei einer Fenstergrösse von 12 \\
 \pythoninline{seasonal_decompose(frame["Passengers"], } \\
 \pythoninline{	model="additive", freq=12).plot()} \\
 Zerlegen einer Zeitreihe in die verschiedenen Faktoren \\
-bei einer Fenstergrösse von 12
+bei einer Fenstergrösse von 12 \\
+
+\pythoninline{seasonal_decompose(np.log(frame["Passengers"]),} \\ \pythoninline{	model="add").resid.plot()} \\
+Residuen Plot von logarithmierten Daten anzeigen
+
+\columnbreak
+
+\pythoninline{seasonal_decompose(frame["Passengers"], } \\ 
+\pythoninline{	model="mul").plot()} \\
+Zerlegen einer Zeitreihe mit dem multiplikativen Modell
+
+\subsection*{Allgemein}
+\pythoninline{from scipy.special import comb} \\
+\pythoninline{comb(N=5, k=3, exact=True)} \\
+Binomialkoeffizient berechnen, in diesem Beispiel $\binom{5}{3}$
 
 \subsection*{Hilfe anzeigen}
 \pythoninline{help(np.random)} \\
